# ia_balck_jack

./: .gitignore  CMakeLists.txt  README.md  TO_DO.md  cahier_des_chagres.md
data/: default_parametre.txt  default_parametre_1_humain.txt  default_parametre_7_ia.txt
doc/: déroulement_programme.md  réglage_pays.md
programme/: main.c  partie.h
src/: affichage.c  affichage.h  autre.c  autre.h  gestionCarte.c  gestionCarte.h  gestionDonnee.c  gestionDonnee.h  ia.c  ia.h  listeChainee.c  listeChainee.h  main.c  main.h  partie.c  partie.h  structure.h  utilisateur.c  utilisateur.h
